Fri Aug 31 14:51:27 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/bigdecimal/test_bigdecimal.rb (TestBigDecimal#test_to_f): added
	  for previous commit.

Fri Aug 31 14:32:05 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_to_f): use self's sign to
	  determine 0.0 and Inf's sign instead of internal double value's.
	  Reported by phasis68 (Heesob Park) at [ruby-core:47381] [Bug #6955]

Fri Aug 31 14:31:17 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* template/id.h.tmpl, tool/id2token.rb: make id.h independent from
	  parse.h, and make parse.c dependent on it instead.

Fri Aug 31 14:27:39 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): fix race conditions at install-ext.
	  target files need to depend on destination directory timestamp
	  files, not phony trgets.

Fri Aug 31 14:03:45 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_trace.c (clean_hooks): do not access freed memory.

	* vm_trace.c (rb_threadptr_exec_event_hooks): fix uninitialized state
	  when no events is excuted.

Thu Aug 30 18:21:51 2012  Tanaka Akira  <akr@fsij.org>

	* io.c (rb_io_close): call rb_last_status_clear.

Thu Aug 30 16:17:52 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_to_f): check underflow since
	  strtod() sets errno to ERANGE at underflow too.  [ruby-core:47342]
	  [Bug #6944]

Thu Aug 30 12:44:43 2012  Akinori MUSHA  <knu@iDaemons.org>

	* lib/set.rb (Set#{<,>,<=,>=}): Define comparison operators as
	  shorthand for the {proper_}{subset?,superset?} methods (finally).
	  Given a push by Alexander E. Fischer.

Thu Aug 30 09:21:01 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/ftp.rb (URI::FTP#initialize): raise InvalidURIError if "//"
	  is not present [ruby-core:47344] [Bug #6945]

Thu Aug 30 07:45:12 2012  Luis Lavena  <luislavena@gmail.com>

	* test/ruby/test_file_exhaustive.rb: fix test introduced in r36811 for