@@ -1,3 +1,11 @@
+Fri Aug 31 16:23:20 2012  Akinori MUSHA  <knu@iDaemons.org>
+
+	* lib/ipaddr.rb: Introduce several new error classes where only
+	  ArgumentError and StandardError were used.  IPAddr::Error is
+	  their common ancestor class that inherits from ArgumentError for
+	  backward compatibility.  Submitted by Jon Daniel.  Fixes #173 on
+	  GitHub.
+
 Fri Aug 31 14:51:27 2012  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* test/bigdecimal/test_bigdecimal.rb (TestBigDecimal#test_to_f): added
